feat: adicionado documentação de tags ao swagger. Nescessário revisar responses!
